--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "MIT",
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "bootstrap": "^5.3.3",
     "colors": "^1.4.0",
     "connect-flash": "^0.1.1",
     "cookie-parser": "^1.4.6",
